// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Workflow Execution Baseline Tests Agent Discovery Baselines should establish agent discovery performance baseline: agent-discovery-error-baseline 1`] = `
{
  "agentCount": 0,
  "error": "expect(received).toBeInstanceOf(expected)

Expected constructor: Array
Received constructor: Array
",
  "expectedError": false,
}
`;

exports[`Workflow Execution Baseline Tests Agent Discovery Baselines should establish team discovery performance baseline: team-discovery-error-baseline 1`] = `
{
  "error": "expect(received).toBeInstanceOf(expected)

Expected constructor: Array
Received constructor: Array
",
  "expectedError": false,
  "teamCount": 0,
}
`;

exports[`Workflow Execution Baseline Tests Dependency Resolution Baselines should establish resource loading performance baseline: resource-loading-baseline 1`] = `
{
  "resourceTypes": {
    "checklists": {
      "hasContent": false,
      "success": false,
    },
    "data": {
      "hasContent": false,
      "success": false,
    },
    "tasks": {
      "hasContent": false,
      "success": false,
    },
    "templates": {
      "hasContent": false,
      "success": false,
    },
  },
}
`;

exports[`Workflow Execution Baseline Tests Error Handling Baselines should establish malformed file handling baseline: malformed-file-baseline 1`] = `
{
  "tests": {
    "malformed-yaml": {
      "actualError": false,
      "expectedError": true,
      "note": "Baseline for malformed YAML structure",
      "testPerformed": true,
    },
  },
}
`;

exports[`Workflow Execution Baseline Tests Error Handling Baselines should establish missing file error handling baseline: error-handling-baseline 1`] = `
{
  "errorTests": {
    "agent-nonexistent-agent": {
      "actualError": true,
      "errorMessage": "ENOENT: no such file or directory, open '/PROJECT_ROOT/bmad-method/bmad-core/agents/nonexistent-agent.md'",
      "errorType": "Error",
      "expectedError": true,
    },
    "resource-nonexistent-resource": {
      "actualError": false,
      "expectedError": true,
      "result": "unexpected-success",
    },
    "team-nonexistent-team": {
      "actualError": true,
      "errorMessage": "ENOENT: no such file or directory, open '/PROJECT_ROOT/bmad-method/bmad-core/agent-teams/nonexistent-team.yaml'",
      "errorType": "Error",
      "expectedError": true,
    },
  },
}
`;

exports[`Workflow Execution Baseline Tests System State Baselines should capture system state baseline: system-state-baseline 1`] = `
{
  "configuration": {},
  "directories": {
    "agent-teams": {
      "exists": false,
      "path": "PROJECT_ROOT/agent-teams",
    },
    "agents": {
      "exists": false,
      "path": "PROJECT_ROOT/agents",
    },
    "checklists": {
      "exists": false,
      "path": "PROJECT_ROOT/checklists",
    },
    "expansion-packs": {
      "contents": [
        "README.md",
        "bmad-2d-phaser-game-dev",
        "bmad-2d-unity-game-dev",
        "bmad-data-practitioner",
        "bmad-infrastructure-devops",
      ],
      "exists": true,
      "fileCount": 5,
      "path": "PROJECT_ROOT/expansion-packs",
    },
    "tasks": {
      "exists": false,
      "path": "PROJECT_ROOT/tasks",
    },
    "templates": {
      "exists": false,
      "path": "PROJECT_ROOT/templates",
    },
    "tests": {
      "contents": [
        "README.md",
        "agents",
        "data-services",
        "fixtures",
        "helpers",
        "integration",
        "performance",
        "regression",
        "security",
        "setup.js",
        "storage",
        "tools",
        "utils",
      ],
      "exists": true,
      "fileCount": 13,
      "path": "PROJECT_ROOT/tests",
    },
    "tools": {
      "contents": [
        "bmad-npx-wrapper.js",
        "builders",
        "bump-all-versions.js",
        "bump-expansion-version.js",
        "cli",
        "cli.js",
        "data-services",
        "flattener",
        "installer",
        "lib",
        "md-assets",
        "rollback",
        "semantic-release-sync-installer.js",
        "sync-installer-version.js",
        "update-expansion-version.js",
        "upgraders",
        "version-bump.js",
        "yaml-format.js",
      ],
      "exists": true,
      "fileCount": 18,
      "path": "PROJECT_ROOT/tools",
    },
  },
  "files": {
    "bmad-core/core-config.yaml": {
      "exists": true,
      "path": "PROJECT_ROOT/bmad-core/core-config.yaml",
      "size": 553,
    },
    "jest.config.js": {
      "exists": true,
      "path": "PROJECT_ROOT/jest.config.js",
      "size": 1622,
    },
    "package.json": {
      "exists": true,
      "path": "PROJECT_ROOT/package.json",
      "size": 3630,
    },
  },
}
`;

exports[`Workflow Execution Baseline Tests Workflow Integration Baselines should establish full workflow execution baseline: workflow-integration-baseline 1`] = `
{
  "workflow": {
    "discovery": {
      "agentCount": 10,
      "success": true,
      "teamCount": 4,
      "totalEntities": 14,
    },
    "performance": {
      "acceptable": true,
      "scalabilityFactor": 14,
    },
    "resolution": {},
  },
}
`;
